[gd_scene load_steps=19 format=2]

[ext_resource path="res://assets/art/spear_guard.png" type="Texture" id=1]
[ext_resource path="res://src/characters/entities/spear_guard/spear_guard.gd" type="Script" id=2]
[ext_resource path="res://src/characters/components/gravity/gravity.tscn" type="PackedScene" id=3]
[ext_resource path="res://src/characters/components/state_machine/state_machine.tscn" type="PackedScene" id=4]
[ext_resource path="res://src/characters/components/ai_idle_state/ai_idle_state.tscn" type="PackedScene" id=5]
[ext_resource path="res://src/characters/components/player_detection_zone/player_detection_zone.tscn" type="PackedScene" id=6]
[ext_resource path="res://src/characters/components/chase_state/chase_state.tscn" type="PackedScene" id=7]
[ext_resource path="res://src/characters/components/hitbox/hitbox.tscn" type="PackedScene" id=8]
[ext_resource path="res://src/characters/components/ai_attack_state/ai_attack_state.tscn" type="PackedScene" id=9]

[sub_resource type="RectangleShape2D" id=9]
extents = Vector2( 5.5, 13 )

[sub_resource type="Animation" id=5]
resource_name = "Attack"
length = 0.4
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 2, 3, 4, 5 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Hitbox/Area2D:collision_mask")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 6, 2 ]
}

[sub_resource type="Animation" id=10]
resource_name = "Fall"
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 13 ]
}

[sub_resource type="Animation" id=2]
resource_name = "Idle"
length = 0.4
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 0, 1 ]
}

[sub_resource type="Animation" id=8]
resource_name = "Jump"
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 14 ]
}

[sub_resource type="Animation" id=3]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Hitbox/Area2D:collision_mask")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 2 ]
}

[sub_resource type="Animation" id=4]
resource_name = "Run"
length = 0.8
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 6, 7, 8, 9, 10, 11, 12, 13 ]
}

[sub_resource type="CapsuleShape2D" id=6]
radius = 4.0

[sub_resource type="CapsuleShape2D" id=7]
radius = 6.0
height = 14.0

[node name="SpearGuard" type="KinematicBody2D"]
collision_layer = 16
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 0, -16 )
texture = ExtResource( 1 )
hframes = 15

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0.5, -13 )
shape = SubResource( 9 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/Attack = SubResource( 5 )
anims/Fall = SubResource( 10 )
anims/Idle = SubResource( 2 )
anims/Jump = SubResource( 8 )
anims/RESET = SubResource( 3 )
anims/Run = SubResource( 4 )

[node name="PlayerDetectionZone" parent="." instance=ExtResource( 6 )]

[node name="Gravity" parent="." instance=ExtResource( 3 )]

[node name="StateMachine" parent="." instance=ExtResource( 4 )]
starting_state = NodePath("AiIdleState")

[node name="AiIdleState" parent="StateMachine" instance=ExtResource( 5 )]
chase_state = NodePath("../ChaseState")

[node name="ChaseState" parent="StateMachine" instance=ExtResource( 7 )]
idle_state = NodePath("../AiIdleState")
attack_state = NodePath("../AiAttackState")

[node name="AiAttackState" parent="StateMachine" instance=ExtResource( 9 )]
idle_state = NodePath("../AiIdleState")

[node name="Hitbox" parent="." instance=ExtResource( 8 )]

[node name="Area2D" parent="Hitbox" index="0"]
collision_mask = 2

[node name="CollisionShape2D" parent="Hitbox/Area2D" index="0"]
position = Vector2( -8, 3 )
rotation = 1.5708
shape = SubResource( 6 )

[node name="Hurtbox" type="Area2D" parent="."]
collision_layer = 8
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hurtbox"]
position = Vector2( 0, -13 )
shape = SubResource( 7 )

[node name="VisibilityEnabler2D" type="VisibilityEnabler2D" parent="."]
position = Vector2( 0, -13.5 )
scale = Vector2( 1, 1.35 )
process_parent = true
physics_process_parent = true

[connection signal="area_entered" from="Hurtbox" to="." method="_on_hurt"]

[editable path="Hitbox"]
